# synphot_refactor

./: .bandit.yaml  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION  CITATION.md  ETCSERVER.BAT  LICENSE.rst  MANIFEST.in  README  README.md  README.rst  ah_bootstrap.py  appveyor.yml  azure-cron.yml  azure-pipelines.yml  azure-templates.yml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: check_milestone.yml  ci_workflows.yml  codeql-analysis.yml  open_actions.yml  predeps_workflow.yml  publish-to-pypi.yml
commissioning/: SETENV.csh  SETENV_MINE.csh  SETENV_PINNED.csh  acs_effstim_cases.py  acs_effstim_cases.txt  acs_etc_cases.py  acs_etc_cases.txt  acs_etc_cases_subset.txt  acs_rn_cases.py  acs_rn_cases.txt  apply_overlap.py  apply_overlap_input.txt  basecase.py  casestats.csh  commissioning_report.txt  comparison.txt  dodiags.csh  doscalars.py  effstim_from_rn.py  errors.txt  finderror.csh  gencases.py  genscience.py  invalid_rn_cases.py  kwfile_dict.py  makehist.py  nicmos_effstim_cases.py  nicmos_effstim_cases.txt  nicmos_etc_cases.py  nicmos_etc_cases.txt  nicmos_etc_cases_subset.txt  nicmos_etc_thermback_cases.py  nicmos_etc_thermback_cases.txt  nicmos_rn_cases.py  nicmos_rn_cases.txt  platform_cases.py  preprocess_rn_cases.py  printversion.py  process_wfc3.csh  processlog.csh  (+40 more)
commissioning/acceptance/: 11feb_r812_all_fail_nicmos.accept  11feb_r812_all_fail_nicmos.accept.apply_log  11feb_r812_excluding_auto_accept_summary.txt  11feb_r812_extreme_fail_acs.accept  11feb_r812_extreme_fail_acs.accept.apply_log  11feb_r812_extreme_fail_acs.accepted.verbose  11feb_r812_extreme_fail_stis.accept  11feb_r812_extreme_fail_stis.accept.apply_log  11feb_r812_subset_fail_acs.accept  11feb_r812_subset_fail_acs.accept.apply_log  11feb_r812_subset_fail_stis.accept  11feb_r812_subset_fail_stis.accept.apply_log  11feb_r812_subset_fail_wfc3.accept  11feb_r812_subset_fail_wfc3.accept.apply_log  11feb_r812_tcr_fail_wfc3.accept  11feb_r812_tcr_fail_wfc3.accept.apply_log  mark_array_ok.py  tcr_crcounts_check.txt
commissioning/convert/: commissioning_cases.py  conv_base.py  convertcases.py
commissioning/diags/: README.txt  check.pro  check2.pro  check2_median.pro  check_noendpts.pro  checkfiles.pro  checkfiles_rn.pro  plot_hists.pro  plottext.pro  procfiles.pro  testcases.pro
commissioning/extrap/: README.txt  acs_bluelist.txt  acs_hrc_win_005_syn.fits  acs_pinlist.txt  acs_sbc_aper_002_syn.fits  combined_bluelist.txt  combined_pinlist.txt  extrap.py  gencombined.csh  nicmos_pinlist.txt  remove_unpinned.py  steps.txt  stis_ng41_007_syn.fits  stis_pinlist.txt  wfpc2_f814w_006_syn.fits
commissioning/grid_atlas/: README.txt  bzspectype.ascii  candidates.txt  history.txt  match.py  nicmos_replace.csh  pickles_readme.txt  pickles_spectype.txt  replace.csh  replace.txt
commissioning/log2cases/: acsPysynphotLog_9oct.txt  clean_all.csh  cleanup_acs.csh  cleanup_all.csh  cleanup_nicmos.csh  cleanup_stis.csh  cleanup_wfc3.csh  etclog_to_testcases.txt  nicmosPysynphotLog_13oct.txt  parselog.py  process_acs.csh  process_all.csh  process_nicmos.csh  process_stis.csh  process_wfc3.csh  stisPysynphotLog_9oct.txt  wfc3IRImagingPysynphotLog.txt  wfc3IRSpecPysynphotLog.txt  wfc3UVIS1ImagingPysynphotLog.txt  wfc3UVIS1SpecPysynphotLog.txt  wfc3UVIS2ImagingPysynphotLog.txt  wfc3UVIS2SpecPysynphotLog.txt
data/generic/: alpha_lyr_stis_005.fits  bessell_h.fits  bessell_j.fits  bessell_k.fits  el1356a.fits  i.fits  p041c_001.fits  r.fits  u.fits
data/wavecat/: cos_fuv_g130m_1291.txt  cos_fuv_g130m_1300.txt  cos_fuv_g130m_1309.txt  cos_fuv_g130m_1318.txt  cos_fuv_g130m_1327.txt  cos_fuv_g140l_1105.txt  cos_fuv_g140l_1230.txt  cos_fuv_g160m_1577.txt  cos_mirror.txt  (+61 more)
doc/: release_checklist.txt
docs/: Makefile  conf.py  index.rst  make.bat  rtd-pip-requirements
licenses/: README.rst  SIX_LICENSE.rst  TYNT_LICENSE.txt
planning/: builds.txt  endstage.txt  endstage_executive_summary.txt  endstage_howto.txt  etc_icd.txt  etc_pysynphot_testplan.txt  etc_test_setup.txt  milestones.txt  non_etc_requirements.txt  pinned_throughput.txt  pysyn_etc_acceptance_testing.txt  pysyn_file_rationalization.txt  some_jan08_issues.txt  specman.design  syn_functionality.txt  testset_timing_r482.txt  wfc3_ir_imaging_timing_17jun.txt  wfc3_ir_spec_timing_17jun.txt
pysynphot/: Cache.py  __init__.py  binning.py  catalog.py  exceptions.py  extinction.py  graphtab.py  locations.py  obsbandpass.py  observation.py  observationmode.py  planck.py  reddening.py  refs.py  renorm.py  reseltable.py  spark.py  spectrum.py  spparser.py  svn_version.py  tables.py  units.py  wavetable.py
src/: pysynphot_utils.c
synphot/: Cache.py  __init__.py  _astropy_init.py  analytic.py  binning.py  blackbody.py  compat.py  compat_specutils.py  config.py  conftest.py  docstrings.py  exceptions.py  extinction.py  integrator.py  io.py  models.py  obsbandpass.py  observation.py  observationmode.py  planck.py  reddening.py  renorm.py  setup_package.py  specio.py  spectrum.py  synexceptions.py  synio.py  synphot.cfg  synutils.py  thermal.py  units.py  utils.py  ver.py
test/: cos_etc_test.py  cos_etc_tickets.py  cos_fuv_cases.py  cos_nuv_cases.py  cos_tests.py  etctest_base_class.py  exceptions_test.py  exercise_etc_server.py  init.doctest  pdk_runners  test_analytic_spectrum.py  test_box.py  test_catalog.py  test_comp.py  test_component_switch.py  test_flip.py  test_graph.py  test_interpolated_spectral_element.py  test_locations.py  test_mergewavesets.py  test_obsbandpass.py  test_observation.py  test_simple.py  test_thermback.py  test_units.py  testimport.py  testspec.py  testtable.py  testutil.py  testwrite.py  ticket113.py  ticket126.py  ticket128.py  ticket139.py  ticket146.py  ticket150.py  ticket157.py  ticket159.py  ticket161.py  ticket162.py  (+15 more)
tests/: test_version.py
tutorials/: hatp11-countrate.ipynb  observing_examples.ipynb
(+289 files in other folders)
