[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build synphot/src
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = synphot
version = 0.1.3
description = Synthetic photometry
long_description = This is a package for doing synthetic photometry that relies on Astropy
author = STScI
author_email = help@stsci.edu
license = BSD
url = http://www.github.com/spacetelescope/synphot_refactor
edit_on_github = False
github_project = spacetelescope/synphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[extension=synphot.synphot_utils]
optional = True
fail_message =
    *********************************************************
    Build failed, trying without C extension.
    This removes no functionality but may affect performance.
    *********************************************************

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504
exclude = synphot/__init__.py,conftest.py,six.py
