[tool:pytest]
minversion = 3.1
testpaths = "synphot" "docs"
norecursedirs = build docs/_build synphot/src
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
xfail_strict = true
filterwarnings =
    ignore:BlackBody provides the same capabilities
    ignore:The MexicanHat1D class is deprecated

[metadata]
name = synphot
description = Synthetic photometry
long_description = This is a package for doing synthetic photometry that relies on Astropy
long_description_content_type = text/plain
keywords = astronomy, astrophysics, synthetic, photometry
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.rst
url = http://www.github.com/spacetelescope/synphot_refactor
edit_on_github = False
github_project = spacetelescope/synphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.16
    astropy>=2
    scipy
python_requires = >=3.5

[options.extras_require]
test =
    pytest-astropy
docs =
    numpy
    scipy
    matplotlib
    sphinx-astropy
    astropy

[options.package_data]
synphot.tests = coveragerc, data/*

[extension=synphot.synphot_utils]
optional = True
fail_message =
    *********************************************************
    Build failed, trying without C extension.
    This removes no functionality but may affect performance.
    *********************************************************

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504
exclude = synphot/__init__.py,conftest.py
