[tool:pytest]
minversion = 6
testpaths = "synphot" "docs"
norecursedirs = build docs/_build synphot/src
astropy_header = true
doctest_plus = enabled
doctest_subpackage_requires =
    docs/index.rst = astropy>=5.3
    docs/synphot/spectrum.rst = astropy>=5.3
    docs/synphot/tutorials.rst = astropy>=5.3
text_file_format = rst
addopts = --doctest-rst --import-mode=append
xfail_strict = true
filterwarnings =
    error
    ignore:can't resolve package from __spec__
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
    ignore:Class CCM89 defines class attributes
    # Ignore numpy 2.0 warning, see https://github.com/astropy/astropy/pull/15495
    # and https://github.com/scipy/scipy/pull/19275
    ignore:.*numpy\.core.*:DeprecationWarning

[metadata]
name = synphot
description = Synthetic photometry
long_description = This is a package for doing synthetic photometry that relies on Astropy
long_description_content_type = text/plain
keywords = astronomy, astrophysics, synthetic, photometry
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://www.github.com/spacetelescope/synphot_refactor
edit_on_github = False
github_project = spacetelescope/synphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.20
    astropy>=5
    scipy>=1.6
python_requires = >=3.9

[options.extras_require]
all =
    specutils>=0.7
    dust-extinction
test =
    pytest-astropy
docs =
    matplotlib
    sphinx-astropy

[options.package_data]
synphot.tests = data/*
synphot.filter_parameterization.tests = data/*

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504

[coverage:run]
source = synphot
omit =
    synphot/_astropy_init*
    synphot/tests/*
    synphot/version*
    */synphot/_astropy_init*
    */synphot/tests/*
    */synphot/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
